cargo-features = ["edition2021"]

[package]
name = "pi"
version = "0.1.0"
edition = "2021"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]


[dependencies]
volatile = { path = "../volatile" }
shim = { path = "../shim", features = ["no_std"] }
