[package]
name = "shim"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
#acid_io = {version = "0.1.0", optional = true}
cfg-if = "0.1"
core_io = { version = "0.1.20210325", package = "core_io", optional = true }

[dev-dependencies]
hashbrown = "0.6.3"

[features]
no_std = ["core_io"]
alloc = ["core_io/alloc", "core_io/collections"]
