[package]
name = "shim"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2021"

[dependencies]
#core_io = { version = "0.1.20210325", package = "core_io", optional = true }
kore_io = { path = "../kore_io", package = "kore_io", optional = true}
cfg-if = {version = "=0.1"}


[dev-dependencies]
hashbrown = "0.5"

[features]
no_std = ["kore_io"]
alloc = ["kore_io/alloc"]
